--- a/Education.Api/appsettings.json
+++ b/Education.Api/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,3306;Database=EducationDb;User=mysql_user;Password=mysql_password;"
+    "DefaultConnection": "Server=mysql-db;Port=3306;Database=EducationDb;User=mysql_user;Password=mysql_password;"
   }
 }
